no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.3.0 (current), 12.13.1 (active LTS), 10.17.0 (active LTS), 8.16.2 (active LTS)
+VERSION ==>                                     #13.5.0 (current), 12.14.0 (active LTS), 10.18.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -258,7 +258,7 @@ SYSTEMERROR.info                                #Extra info, if any
                                              \=+===============================+=/
 
 
-EventEmitter                                    #Base class of all objects receiving events
+new EventEmitter([OPTS])                        #Base class of all objects receiving events
                                                 #'EVENT' can be a SYM
                                                 #Events are emitted synchronously
 EVENTEMITTER.on('EVENT', FUNC)->EVENTEMITTER    #
@@ -284,6 +284,14 @@ EVENTEMITTER.getMaxListeners()->NUM             #
 EVENTEMITTER.defaultMaxListeners                #10
 EVENTEMITTER.on                                 #Event when a new event handler is added or removed.
  ("new|removeListener", FUNC(EVENT, FUNC2))     #Added|removed FUNC2 might still [not] be in EVENTEMITTER.listeners(EVENT)
+
+OPTS.captureRejections                       13*#BOOL. Enables Symbol.for('nodejs.rejection')
+EventEmitter.captureRejections               13*#Default value for OPTS.captureRejections (def: false)
+EVENTEMITTER[Symbol.for('nodejs.rejection')] 13*#Can be set to a FUNC(VAL, 'EVENT', ...ARGS)
+EVENTEMITTER[captureRejectionSymbol]         13*#If not set, fire 'error' event handler FUNC(VAL) instead.
+                                             13*#Fired when an EVENTEMITTER handler returns a PROMISE rejected with VAL.
+                                             13*#Not recursive (not done if 'nodejs.rejection' or 'error' event handler rejects
+                                             13*#a PROMISE themselves).
 
 
                                              /=+===============================+=\
@@ -517,7 +525,7 @@ import ... from 'URI'                        13*#Import from 'URI' not PATH
                                              13*#  - i.e. can load twice a file by using different ?QUERY
                                              13*#Can use fileURLToPath|pathToFileURL() to convert
 
---es-module-specifier-resolution=STR         13*#Whether:
+--experimental-specifier-resolution=STR      13*#Whether:
                                              13*#  - 'node': can omit file extension or use index.js
                                              13*#  - 'explicit' (def): cannot (like in browsers)
                                              13*#Both use same algorithm to find node_modules (unlike browsers)
@@ -557,6 +565,7 @@ PACKAGE.exports                              13*#'URI'[_ARR]. Like PACKAGE.main 
 PACKAGE.exports.CONDITION                    13*#'URI'[_ARR]. Like PACKAGE.exports except only if CONDITION matches.
                                              13*#Available CONDITION:
                                              13*#  - require: loaded by require()
+                                             13*#  - import: loaded by ES import|import()
                                              13*#  - node: Node.js environment (loaded by require()|import)
                                              13*#  - browser: browser environment
                                              13*#  - default: always match, but least priority
@@ -933,6 +942,10 @@ INTERFACE.on("close", FUNC())                   #
 
 INTERFACE.on("line", FUNC(STR))                 #Fired each time a line is read from ISTREAM.
 INTERFACE[Symbol.asyncIterator]              10*#Defined
+INTERFACE.line                                  #STR input in the current line. Flushed after each newline/'line' event
+INTERFACE.cursor                                #Cursor horizontal position within current line
+INTERFACE.getCursorPos()->OBJ                13*#Current cursor position in the screen. Takes into account wrapping.
+                                             13*#OBJ: rows NUM, cols NUM
 
 INTERFACE.write(STR[, OBJ])                     #Prints STR on OSTREAM
                                                 #Use CTRL|META|SHIFT-STR if OBJ: ctrl|meta|shift: true, name: STR
@@ -1005,6 +1018,7 @@ start([OPTS])->REPLSERVER                       #Forwards to INTERFACE:
                                                 #     - REPL_MODE_STRICT: "use strict"
                                                 #     - REPL_MODE_SLOPPY (def): inverse
                                                 #  - breakEvalOnSigint BOOL: if true (def: false), stops on CTRL-C
+                                             13*#  - preview BOOL (def: true): show autocomplete and output preview
 REPLSERVER.on("exit", FUNC())                   #
 REPLSERVER.on("reset", FUNC())                  #When ".clear" or resetContext() is called.
 
@@ -1394,7 +1408,10 @@ TLSSOCKET.getCertificate()->OBJ                 #Same but for current end.
 TLSSOCKET.encrypted                             #Always true. To distinguish from TCPSOCKET.
 TLSSOCKET.authorized                            #False if certificate was not signed by CA specified in ca: STR_ARR
                                                 #If false, reason might be given in TLSSOCKET.authorizationError STR
-TLSSOCKET.getCipher()->OBJ                      #Current SSL cipher used as { name STR, version STR }
+TLSSOCKET.getCipher()->OBJ                      #Current SSL cipher used as OBJ:
+                                                #  - name STR (e.g. 'AES128-SHA256')
+                                             13*#  - standardName STR: IETF name (e.g. 'TLS_RSA_WITH_AES_128_CBC_SHA256')
+                                                #  - version STR (e.g. 'TLSv1.2')
 TLSSOCKET.getProtocol()->STR                    #Among 'SSLv3|TLSv1[.1|2]|unknown'
 TLSSOCKET.alpnProtocol                          #Protocol selected among ALPNProtocols (see above)
 TLSSOCKET.servername                            #For SNI, chosen 'HOST'
@@ -1464,7 +1481,8 @@ HTTPSERVER.timeout                              #Same
                                              13*#Def: 0
 HTTPSERVER.on("timeout", FUNC(RES))             #Called when any RES 'timeout' event is fired
 HTTPSERVER.headersTimeout                    11*#Like HTTPSERVER.timeout but for the time taken to receive HTTP headers.
-                                             11*#Def: 4e4, i.e. 40 secs
+                                             13*#Def: 6e4, i.e. one minute
+                                             11*#  - used to be 4e4, i.e. 40 secs
 
 HTTPSERVER.keepAliveTimeout                     #Keep TCPSOCKET NUMms (def: 5000) after RES.end() was called, so it can be
                                                 #reused if a new request from same host arrives.
@@ -1510,7 +1528,6 @@ RES                                             #OSTREAM, writing the body:
                                                 #  - Transfer-Encoding: chunked [S]
 RES.on("close", FUNC())                         #Fired if closed before end() was called
 RES.headersSent                                 #True if headers are sent
-RES.finished                                    #True if all sent (i.e. after end())
 RES.writableEnded                            12*#Same
 RES.writableFinished                         12*#True if all sent + flushed
 RES.statusCode|Message                          #If statusMessage not set, use STATUS_CODES[statusCode]
@@ -2302,6 +2319,8 @@ on("beforeExit", FUNC(INT))                     #FUNC() can be async. If async, 
 on("exit", FUNC(INT))                           #FUNC() must be sync
 process.exitCode                                #INT set in 'exit' handler providing either process.exit() or uncaught exception.
                                                 #Can be set too
+--trace-exit                                 13*#Print a stack when calling process.exit()
+                                             13*#Not for other exit types (normal exits, signals, uncaught exceptions, etc.)
 
 on("uncaughtException", FUNC(VAL, STR))         #Any exception VAL thrown and not caught in try/catch
                                                 #VAL is usually an ERROR
@@ -2670,6 +2689,8 @@ new Worker('SCRIPT_PATH'[, OPTS])            10*#OPTS:
                                              10*#  - workerData VAL:
                                              10*#     - assigned to WORKER_THREADS.workerData VAL
                                              10*#     - same possible types as postMessage()
+                                             13*#  - argv STR_ARR: process.argv
+                                             13*#     - same possible types as postMessage()
                                              11*#  - execArgv STR_ARR (def: process.execArgv)
                                              11*#  - env OBJ (def: process.env)
                                              11*#     - copied
@@ -3246,6 +3267,7 @@ inspect(VAL[, OBJ])                             #Print function used by repl. Re
                                                 #OBJ members are:
                                                 #  - showHidden BOOL: if false (def), doesn't show non-enumerable properties,
                                                 #    except SYMs
+                                             13*#    and user-defined prototype properties
                                                 #  - depth NUM (def: 2): max recursion (null|Infinity for infinite)
                                       11.0-11.3*#    Def: 20
                                                 #  - maxArrayLength NUM (def: 100) (null for infinite)
