--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1548,7 +1548,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (14.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (15.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-trim-start-end    ##Prefer STR.trimStart|End() over STR.trimLeft|Right()
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
@@ -2118,3 +2118,6 @@ unicorn/prefer-node-remove       ##Prefer NODE.remove() over NODE.removeChild()
 unicorn/prefer-text-content      ##Prefer NODE.textContent over ELEM.innerText
 unicorn/prefer-event-key         ##Prefer EVENT.key over EVENT.keyCode
 unicorn/prefer-dataset           ##Prefer ELEM.dataset over ELEM.setAttribute()
+unicorn/prefer-modern-dom-apis   ##Prefer:
+                                 ##  - NODE.replaceWith() over NODE.replaceChild()
+                                 ##  - NODE.before() over NODE.insertBefore|AdjacentText|AdjacentElement()
