no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -3325,8 +3325,9 @@ promisify(FUNC(..., FUNC2(ERROR, VAL)))->FUNC   #Transform FUNC so FUNC(...)->PR
 callbackify(FUNC()->PROMISE)
  ->FUNC(..., FUNC2(ERROR, VAL))                 #Inverse. FUNC will not return PROMISE anymore
 
-isDeepStrictEqual(VAL, VAL2)                  9*#Does a deep Object.is()
-                                              9*#Does not compare non-enumerable properties
+isDeepStrictEqual(VAL, VAL2)                  9*#Does a deep equality
+                                              9*#Does not compare inherited nor non-enumerable properties
+                                              9*#Handles NaN, DATE, REGEXP, MAP|SET, ERROR
 
 inherits(TYPE_FUNC, TYPEPARENT_FUNC)            #Makes TYPE inherits from TYPEPARENT, i.e. executes:
                                                 #  TYPE.prototype = Object.create(TYPEPARENT.prototype)
