no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2000,8 +2000,10 @@ WRENCH.rmdirSyncRecursive(FILE|DIR[, BOOL])    ##Same. If true, fails silently.
 
 mkdir(PATH[, MODE_INT|OPTS], FUNC(ERROR))    10*#OPTS:
                                                 #  - mode MODE_INT (def: 0777) (see above for Windows behavior)
-                                             10*#  - recursive BOOL (def: false)
-                                             10*#    See make-dir (see its doc) for a ponyfill
+                                             10*#  - recursive BOOL (def: false):
+                                             10*#     - create intermediary directories
+                                             10*#     - no error if directory exists
+                                             10*#     - see make-dir (see its doc) for a ponyfill
 FS-EXTRA.ensureFile|Dir(FILE|DIR,FUNC(ERROR))  ##Create file|dir, including parent dirs, if not existing.
 FS-EXTRA.mkdirs(DIR, FUNC(ERROR))              ##Like ensureDir()
 WRENCH.mkdirSyncRecursive(DIR[, MODE_INT])
@@ -2152,7 +2154,7 @@ FS.promises                                  10*#Like FS but:
                                              10*#  - FD_INT are FILE_HANDLE instead
                                              10*#     - no FS.close() but FILE_HANDLE.close() is available
                                              10*#  - FS.constants|Stats|*OK remain on FS.*
-                                         10.7.0*#No more experimental warning
+                                        10.17.0*#No more experimental warning
 FILE_HANDLE                                  10*#Abstraction of a file descriptor, with automatic closing on FS PROMISE rejection
 FILE_HANDLE.fd                               10*#FD_INT
 FILE_HANDLE.FUNC(...)                        10*#Same as FSP.[f]FUNC(FILE_HANDLE, ...)
