no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1412,9 +1412,9 @@ SEGMENTER.segment(STR)->OBJ_ITERABLE         *-~#OBJ:
                                                 #          REGEXP.lastIndex
                                                 #           - this is what do standard JavaScript methods,
                                                 #             e.g. STR.match|replace()
-                                                #     - m: ^ $ newline-wise (otherwise not)
-                                            9*-|#     - s: . newline-wise (otherwise not), i.e. match any character including:
-                                              -|#       LF CR U+2028 U+2029
+                                                #     - m: ^ $ newline-wise (otherwise whole-string-wise)
+                                            9*-|#     - s: . whole-string-wise (otherwise newline-wise),
+                                            9*-|#       i.e. match any character including: LF CR U+2028 U+2029
                                               -|#     - y: same as g, with ^ in beginning of PATTERN
                                               -|#     - u: see above
                                                 #  - available at REGEXP.ignoreCase|global|multiline|sticky BOOL
