no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2074,7 +2074,7 @@ readFile                                        #Easier way than using open() an
                                                 #  - flag STR (def: "r")
                                                 #Prefer createReadStream(...).pipe(OSTREAM)
 FS-EXTRA.readJson(...)                         ##Same as readFile(), but return as OBJ
-write|appendFile(FILENAME|UINT,                 #OBJ has same members but also mode MODE_INT (def: 0666)
+write|appendFile(FILENAME|UINT,                 #OBJ has same members but also mode MODE_INT (def: 0666), and default encoding is 'utf8'
 [STDBUFFER,] [OBJ, ] FUNC(ERROR))               #Def flag is "w|a"
 FS-EXTRA.outputFile(...)                       ##Same as writeFile(), but calls ensureFile() first
 FS-EXTRA.writeJson|outputJson(...)             ##Same as writeFile|outputFile(), but with an OBJ (JSON.stringify'd).
