no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1689,7 +1689,7 @@ node/prefer-dns/fs               ##Use DNS.promises.* instead of DNS.*
                                              \=+===============================+=/
 
 
-import/*                         ##Node module "eslint-plugin-import" (2.18.2)
+import/*                         ##Node module "eslint-plugin-import" (2.20.0)
                                  ##Most seem to work for both require() and import|export,
                                  ##although mostly targeting import|export
                                  ##Uses the following CONF.settings:
@@ -1705,8 +1705,8 @@ import/*                         ##Node module "eslint-plugin-import
                                  ##     - uses package eslint-import-resolver-RESOLVER
                                  ##     - resolvers do preprocessing each imported path
                                  ##     - available:
-                                 ##        - webpack (0.11.2), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
-                                 ##        - node (0.3.2), with RESOLVER_OPTS:
+                                 ##        - webpack (0.12.1), with RESOLVER_OPTS: config STR|OBJ (def: use webpack.config.js), env ENV
+                                 ##        - node (0.3.3), with RESOLVER_OPTS:
                                  ##           - extensions '.EXT'_ARR
                                  ##           - paths STR_ARR (like NODE_PATH)
                                  ##           - moduleDirectory STR_ARR (alternate names for node_modules)
@@ -1855,9 +1855,13 @@ import/order [OBJ]               ##Must order import|require
                                  ##     - pattern 'GLOB'
                                  ##     - patternOptions OBJ: minimatch options
                                  ##     - position 'before|after' (def: inside group)
+                                 ##  - pathGroupsExcludedImportTypes 'GROUP'_ARR (def: ['builtin', 'external']): exclude those
+                                 ##    groups from pathGroups
                                  ##  - newlines-between STR: newlines between import|require, among 'always' (between groups),
                                  ##    'always-and-inside-groups' (between any import|require), 'never', 'ignore' (def)
-                                 ##  - alphabetize.order 'asc', 'desc' or 'ignore' (def): alphabetical sorting within each group
+                                 ##  - alphabetize:
+                                 ##     - order 'asc', 'desc' or 'ignore' (def): alphabetical sorting within each group
+                                 ##     - caseInsensitive BOOL (def: false)
 import/newline-after-import [OBJ]##Must have OBJ.count NUM (def: 1) newlines after last import|require
 
 import/unambiguous               ##Make sure file types matches parserOptions.sourceType 'script|module'
@@ -1878,7 +1882,7 @@ import/no-webpack-loader-syntax  ##Avoid import|require using Webpack loader syn
 
 import/no-restricted-paths [OBJ] ##Blacklists import|require of any file inside some DIR when inside some specific DIR2
                                  ##OBJ:
-                                 ##  - zones OBJ_ARR: target DIR2, from DIR
+                                 ##  - zones OBJ_ARR: target DIR2, from DIR, except DIR_ARR
                                  ##  - basePath DIR3 (def: $PWD): of DIR2|DIR
 
 unicorn/import-index [OBJ]       ##Avoid import|require of index.js with './index.js' or 'DIR/'. Prefer 'DIR'
