no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -131,9 +131,9 @@ MATCH                             #Either:
 CONF                              #Can be:
                                   #  - BABEL-CORE.transform() OBJ
                                   #  - babel CLI flags
-                                  #  - BABEL_ROOT/babel.config.[c]js|json OBJ[(CONF_API)]
+                                  #  - BABEL_ROOT/babel.config.js|cjs|mjs|json OBJ[(CONF_API)]
                                   #     - or --config-file|CONF.configFile PATH
-                                  #  - CURRENT_DIR/.babelrc.[c]js OBJ[(CONF_API)]
+                                  #  - CURRENT_DIR/.babelrc.js|cjs|mjs|json OBJ[(CONF_API)]
                                   #  - CURRENT_DIR/.babelrc JSON5
                                   #  - CURRENT_DIR/package.json PACKAGE.babel OBJ
 BABEL_ROOT                        #Starts with CONF.root
@@ -168,8 +168,10 @@ CONF.exclude                      #Inverse
 --only|ignore
 CONF.only|ignore                  #Like CONF.include|exclude except applies to all sub-CONFs not only current one
 .babelignore                      #Like CONF.only|ignore. Same syntax as .gitignore
+--copy-ignored                    #Copy ignored files, although they are not transpiled
 -x|--extensions                   #'.EXT',... (def: '.es6|js|es|jsx|mjs').  Only input files with those.
 --keep-file-extensions            #
+--out-file-extension              #'EXT' of the output files
 
 --env-name                        #'VAR'
 CONF.envName                      #Merges CONF.env.VAR.* to CONF.*, allowing environment-specific configuration
