no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - typescript (preferred)
                                   #  - flow: very similar to TypeScript, a little less features, less focus on extending JavaScript, less high-profile
 
-VERSION ==>                       #3.7.5
+VERSION ==>                       #3.8.0-beta
 
 
                                              /=+===============================+=\
@@ -476,6 +476,7 @@ class CLASS                       #CLASS can be used as OBJ_TYPE (of instances)
   [public|protected|private] VAR  #Fields visibility is different than JavaScript:
                                   #  - VAR -> [public] VAR
                                   #  - #VAR -> private VAR
+                                  #     - should prefer #VAR as it's standard JavaScript and is enforced runtime too
                                   #  - not possible -> protected VAR
                                   #     - like private VAR but child CLASS can access it too
 }
@@ -985,6 +986,19 @@ ES MODULES ==>                    #Must be used for sources.
                                   #Can "export import VAR = ..."
                                   #Can use dynamic import()
                                   #import.meta is empty OBJ
+
+import|export type ...            #Same as import|export ... except only works for TYPEs
+                                  #  - e.g. CLASS|FUNC|ENUM are only meant as TYPEs not VAL
+                                  #Preferred when possible as it can otherwise be ambiguous whether TYPE|VAL is imported
+--importsNotUsedAsValues STR      #How to transpile import ... that are not used runtime:
+                                  #  - 'remove'
+                                  #  - 'preserve': for import TYPE|VAL
+                                  #  - 'error': preserve import VAL, error on import TYPE
+                                  #Default:
+                                  #  - 'remove' if detected as TYPE (including import type ...)
+                                  #     - problem if has side effect
+                                  #  - 'preserve' if cannot detect whether TYPE|VAL
+                                  #     - problem if TYPE only, since it does not exist at runtime but is kept after transpile
 
 import(STR).VAR                   #Same as import {VAR} from 'STR' except:
                                   #  - as a value (not a statement)
