no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1884,6 +1884,7 @@ await PROMISE2|VAL                            -|#Inside async FUNC:
                                               -|#     - if PROMISE2 value returns PROMISE3, use PROMISE3 value instead
                                               -|#     - VAL is like Promise.resolve(VAL)
                                               -|#  - then returns|throws PROMISE2 value
+                                            *-|~#Can be in top-level scope too
 
 ASYNC_ITERATOR                                -|#ITERATOR whose next|return|throw(...)->PROMISE(VAL) (instead of returning|throwing VAL)
 ASYNC_ITERABLE                                -|#OBJ where OBJ[Symbol.asyncIterator]()->ASYNC_ITERATOR
