no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -85,17 +85,18 @@ CONF.compileOnSave                #Tells IDE to run tsc in watch mode.
 
 --preserveWatchOutput             #Do not clear screen between runs with --watch
 
-ENVVAR TSC_WATCHFILE              #Whether --watch uses fs.watchFile() or fs.watch():
-                                  #  - def: fs.watchFile() with 250ms interval
-                                  #  - 'PriorityPollingInterval': fs.watchFile() with longer intervals for config files and missing files
-                                  #  - 'DynamicPriorityPolling': fs.watchFile() with longer intervals for not frequently modified files
-                                  #  - 'UseFsEventsOnParentDirectory' (def if ENVVAR TSC_NONPOLLING_WATCHER set): use fs.watch() on root directory
-                                  #  - 'UseFsEvents': fs.watch() on files
-                                  #  - 'UseFsEventsWithFallbackDynamicPolling': 'useFsEvents' with fallback to 'DynamicPriorityPolling'
-ENVVAR TSC_WATCHDIRECTORY         #When using fs.watch('DIR') on Linux, since it does not support OPTS.recursive, how to handle it:
-                                  #  - def: recurse over descendants and use fs.watch()
-                                  #  - 'RecursiveDirectoryUsingFsWatchFile': fs.watchFile()
-                                  #  - 'RecursiveDirectoryUsingDynamicPriorityPolling': fs.watchFile() with longer intervals for not frequently modified files
+CONF.watchOptions.watchFile       #Whether --watch uses fs.watchFile() or fs.watch() on regular files:
+ENVVAR TSC_WATCHFILE              #  - 'fixedPollingInterval': fs.watchFile() with fixed intervals
+                                  #  - 'priorityPollingInterval': fs.watchFile() with longer intervals for config files and missing files
+                                  #  - 'dynamicPriorityPolling': fs.watchFile() with longer intervals for not frequently modified files
+                                  #  - 'useFsEventsOnParentDirectory' (def if ENVVAR TSC_NONPOLLING_WATCHER set): use fs.watch() on root directory
+                                  #  - 'useFsEvents' (def): fs.watch() on files
+CONF.watchOptions.watchDirectory
+ENVVAR TSC_WATCHDIRECTORY         #Same for directories
+CONF.watchOptions.fallbackPolling #Fallback 'fixedPollingInterval|priorityPollingInterval|dynamicPriorityPolling' when using
+                                  #'useFsEvents*' but fs.watch() not available on platform
+CONF.watchOptions.
+ synchronousWatchDirectory        #BOOL (def: false). Disable watch bounding on directories. Only useful for specific setups
 
 
                                              /=+===============================+=\
@@ -111,6 +112,8 @@ ENVVAR TSC_WATCHDIRECTORY         #When using fs.watch('DIR') on Linux, since it
                                   #  - the current CONF
                                   #On next run use it to only select newly updated files.
 --tsBuildInfoFile                 #'PATH' to tsconfig.tsbuildinfo (def: './tsconfig.tsbuildinfo')
+--assumeChangesOnlyAffectDirect   #Only select newly updated files, not their dependencies.
+ Dependencies                     #Faster but does not typecheck dependencies.
 
 CONF.references                   #Sub-CONFs:
                                   #  - when imported, only *.d.ts will be tried
@@ -1244,6 +1247,8 @@ TYPE                              #TYPE in @TAG can be either JSDoc TYPE or Type
 @TAG                              #Only the following tags are allowed
 @typedef {TYPE} TYPE2
 @type {TYPE}
+@readonly
+@public|protected|private
 @enum [{TYPE}]
 @param [{TYPE}] VAR [- COMMENT]
 @returns [{TYPE}] [COMMENT]
