no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.17.0)
+react/*                          ##Node module "eslint-plugin-react" (7.18.0)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -623,6 +623,10 @@ react/*                          ##Node module "eslint-plugin-react"
 
 react/prefer-es6-class [STR]     ##Requires either ES6 classes, or ES5 createReactClass()
                                  ##STR: 'always' (def), 'never'
+react/function-component-        ##Whether functional components should use OBJ.[un]namedComponents:
+ definition [OBJ]                ##  - 'function-declaration' (def for namedComponents)
+                                 ##  - 'function-expression' (def for unnamedComponents)
+                                 ##  - 'arrow-function'
 react/no-this-in-fsc             ##No "this" in stateless component
 react/no-multi-comp [OBJ]        ##Avoid multiple RTYPE declarations per file
                                  ##OBJ:
@@ -649,6 +653,8 @@ react/no-unknown-property [OBJ]  ##Avoid unknown HTML attributes in RDOM
                                  ##Can whitelist with OBJ.ignore 'ATTR'_ARR
 react/button-has-type [OBJ]      ##Enforce that type value of <button> is specified and is valid
                                  ##Can pass OBJ.button|submit|reset false to forbid some types
+react/no-adjacent-inline-elements##Must separate inline HTML tags (like <a>) with whitespaces.
+                                 ##Otherwise they would be displayed next to each other with no space in-between.
 react/no-unescaped-entities [OBJ]##Must HTML escape > " ' } inside text nodes
                                  ##OBJ:
                                  ##  - forbid STR_ARR (def: > " ' }) or OBJ_ARR: char STR, alternatives STR_ARR (what to replace with)
@@ -669,6 +675,10 @@ react/jsx-no-target-blank [OBJ]  ##<a target="_blank"> must be accompanied by re
                                  ##OBJ:
                                  ##  - enforceDynamicLinks 'always' (def) or 'never': whether to enforce it when URI is JSX
                                  ##  - allowReferrer BOOL: if false (def), requires noreferrer
+react/jsx-no-script-url [OBJ_ARR]##No "javascript:*" URLs
+                                 ##OBJ_ARR:
+                                 ##  - name 'TAG': only for <TAG>
+                                 ##  - props 'ATTR'_ARR: only for ATTR="..."
 
 react/jsx-key [OBJ]              ##Must use "key" when needed
                                  ##OBJ:
@@ -694,6 +704,7 @@ react/require-default-props [OBJ]##Must use defaultProps for every non-required 
                                  ##OBJ:
                                  ##  - forbidDefaultForRequired BOOL (def: false): must not use defaultProps for a required
                                  ##    propType
+                                 ##  - ignoreFunctionalComponents BOOL (def: false): ignored for functional components
 react/default-props-match-       ##Avoid defaultProps with no propType
  prop-types [OBJ]                ##Also avoid if there is a propType but it is required, if OBJ.allowRequiredDefaults false (def)
 react/no-unused-prop-types [OBJ] ##Avoid unused propTypes
