no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #13.5.0 (current), 12.14.0 (active LTS), 10.18.0 (active LTS), 8.17.0 (active LTS)
+VERSION ==>                                     #13.6.0 (current), 12.14.0 (active LTS), 10.18.0 (active LTS), 8.17.0 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -287,10 +287,13 @@ EVENTEMITTER.on                                 #Event when a new event handler 
 OPTS.captureRejections                       13*#BOOL. Enables Symbol.for('nodejs.rejection')
 EventEmitter.captureRejections               13*#Default value for OPTS.captureRejections (def: false)
 EVENTEMITTER[Symbol.for('nodejs.rejection')] 13*#Can be set to a FUNC(VAL, 'EVENT', ...ARGS)
-EVENTEMITTER[captureRejectionSymbol]         13*#If not set, fire 'error' event handler FUNC(VAL) instead.
-                                             13*#Fired when an EVENTEMITTER handler returns a PROMISE rejected with VAL.
+EVENTEMITTER[captureRejectionSymbol]         13*#Fired when an EVENTEMITTER handler returns a PROMISE rejected with VAL.
+                                             13*#If not set, fire 'error' event handler FUNC(VAL) instead.
                                              13*#Not recursive (not done if 'nodejs.rejection' or 'error' event handler rejects
                                              13*#a PROMISE themselves).
+
+EventEmitter.errorMonitor                    13*#Special 'EVENT' that behaves like 'error' except if no 'error' listener is
+                                             13*#defined, an error is still thrown afterwards
 
 
                                              /=+===============================+=\
@@ -2066,13 +2069,13 @@ f[data]sync(FD_INT, FUNC(ERROR))                #Flushes to disk
                                                 #If 'data', does not flush metadata (e.g. mtime)
 
 readFile                                        #Easier way than using open() and read()
-(PATH|FD_INT, [OBJ, ]FUNC(ERROR, BUFFER|STR))   #OBJ:
+(PATH|FD_INT, [OPTS, ]FUNC(ERROR, BUFFER|STR))  #OPTS:
                                                 #  - encoding 'ENCODING' (def: null, i.e. returns BUFFER, otherwise returns STR)
                                                 #  - flag STR (def: "r")
                                                 #Prefer createReadStream(...).pipe(OSTREAM)
 FS-EXTRA.readJson(...)                         ##Same as readFile(), but return as OBJ
-write|appendFile(FILENAME|UINT,                 #OBJ has same members but also mode MODE_INT (def: 0666), and default encoding is 'utf8'
-[STDBUFFER,] [OBJ, ] FUNC(ERROR))               #Def flag is "w|a"
+write|appendFile(FILENAME|UINT,                 #OPTS has same members but also mode MODE_INT (def: 0666), and default encoding is 'utf8'
+[STDBUFFER,] [OPTS, ] FUNC(ERROR))              #Def flag is "w|a"
 FS-EXTRA.outputFile(...)                       ##Same as writeFile(), but calls ensureFile() first
 FS-EXTRA.writeJson|outputJson(...)             ##Same as writeFile|outputFile(), but with an OBJ (JSON.stringify'd).
 createReadStream(PATH[, OBJ])->ISTREAM          #Preferred over readFile().
@@ -3106,6 +3109,8 @@ ASSERT[.ok](VAL)                                #VAL === true
 
 ASSERT.ifError(VAL)                             #VAL === null
 
+ASSERT.[doesNot]match(STR, REGEXP)           13*#REGEXP.test(STR)
+
 ASSERT.throws|doesNotThrow(FUNC()[, VAL])       #Function throws
                                                 #VAL can be:
                                                 #  - TYPE|ERROR: instanceof
@@ -3555,3 +3560,10 @@ getHeapSnapshot()->ISTREAM                   11*#Create a V8 heap snapshot. This
 writeHeapSnapshot(['FILENAME'])->'FILENAME'  11*#Write getHeapSnapshot() to a file in process.cwd()
                                              11*#'FILENAME' defaults to 'Heap-${yyyymmdd}-${hhmmss}-${pid}-${threadId}.heapsnapshot'
 --heapsnaphot-signal=SIGNAL                  12*#Do writeHeapSnapshot() on SIGNAL
+
+--use-largepages=STR                         13*#Use page size of 2MiB instead of 4KiB.
+                                             13*#Good when lots of random access on large amount of memory
+                                             13*#STR can be:
+                                             13*#  - 'off' (def)
+                                             13*#  - 'silent': silent if fail
+                                             13*#  - 'on': warning if fail
